[gd_scene load_steps=5 format=3 uid="uid://dp6tiy4kpmu3y"]

[ext_resource type="Script" path="res://GameDVDCardtridge/HexagonEngine-v3/SpareParts/Gameplay/cure_zone_area.gd" id="1_01lk4"]
[ext_resource type="Material" uid="uid://bhvxecru8bs44" path="res://modules/ShadeMaterials/CureBall.tres" id="1_ib64l"]

[sub_resource type="SphereMesh" id="SphereMesh_5fgxc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3bn8"]

[node name="CureZone" type="Area3D"]
script = ExtResource("1_01lk4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_ib64l")
mesh = SubResource("SphereMesh_5fgxc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_i3bn8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
